# P7

./: .gitignore  CMakeLists.txt
Binaries/: P7_Cpp  P7_SPEED_Cpp  P7_Test
Tests/Speed/: CMakeLists.txt
examples/C/: makefile
examples/Cpp/: CMakeLists.txt  Main.cpp  makefile
examples/Python/: Example.py
include/p7/: P7_Client.h  P7_Cproxy.h  P7_Telemetry.h  P7_Trace.h
p7_shared/: CRC32.h  IConsole.h  Predicate.h
src/: CRC32.cpp  ClText.cpp  Client.cpp  Common.h  CommonClient.h  Proxy.cpp  makefile
tests/Speed/: CMakeLists.txt  Speed.cpp  SpeedParalel_cpp  makefile
tests/Trace/: CMakeLists.txt  Main.cpp  makefile
wrappers/Py/: P7.py
